<resources>
    <string name="app_name">Layout</string>
    <string name="button_name1_main">constraint_layout</string>
    <string name="button_name1_detail">button 1</string>
    <string name="button_name2_main">frame_layout</string>
    <string name="button_name2_detail">button 2</string>
    <string name="button_name3">button 3</string>
    <string name="button_name4">button 4</string>
    <string name="button_name5">button 5</string>
    <string name="button_name6">button 6</string>
    <string name="button_name7">button 7</string>
    <string name="button_name8">button 8</string>
    <string name="button_name9">button 9</string>
    <string name="button_name10">button 10</string>
    <string name="android_practice">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="button_signup">Signup</string>
    <string name="button_Login">Login</string>
    <string name="user_head">user head</string>
</resources>